Refactor default theme to be an Astarian themed one.

--- a/src/less/theme-base.less
+++ b/src/less/theme-base.less
@@ -1,9 +1,20 @@
 @import 'optimal.less';
 
 @base-font-size: 1.0em;
-@base-line-height: 1.24;
+@base-line-height: 1.28;
+@color-font-primary: #111111;
 
 body {
 	line-height: @base-line-height;
 	font: @base-font-size/@base-line-height 'Avenir', Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom:10px;
+}
+p {
+	margin-bottom:8px;
+}
+ul, ol {
+	margin-bottom:12px;
 }
