Separate commonly grouped content into panels for better styling.

--- a/src/less/theme-base.less
+++ b/src/less/theme-base.less
@@ -1,10 +1,8 @@
 @import 'optimal.less';
-
-@base-font-size: 1.0em;
-@base-line-height: 1.28;
-@color-font-primary: #111111;
+@import 'system-variables.less';
 
 body {
+	padding: @grid-pad @grid-pad 0 @grid-pad;
 	line-height: @base-line-height;
 	font: @base-font-size/@base-line-height 'Avenir', Helvetica, Arial, sans-serif;
 }
