Playing around with colours.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
 // Imported once into root App.js
 @import 'style/_variable';
 
-body {
-  color: $color_fill--primary-inverse;
-  background: $color_fill--primary;
-}
+// body {
+//   color: $color_fill--primary-inverse;
+//   background: $color_fill--primary;
+// }
 
 .view-root {
   margin: 40px 80px;
