Make view container more generic

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -4,9 +4,9 @@
 @import '_reset';
 
 /**
- * Container of allll the vieewwwws
+ * Container of allll the app things
  **/
-.view-container {
+.app-container {
 }
 
   /**
