--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -10,6 +10,13 @@
 }
 
   /**
+   * Custom styles for <Title />
+   **/
+  .title-main {
+    border: 1px dashed white;
+  }
+
+  /**
    * Custom styles for <UserNavigation />
    **/
   .navigation-main {
