Remove Title component abstraction

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -14,6 +14,8 @@
    * Custom styles for <Title />
    **/
   .title-main {
+    margin: 0 0 1rem 0;
+    padding: 0;
     border: 1px dashed white;
   }
 
